[package]
name = "ccrl-gui"
version = "0.2.0"
description = "A Tauri App"
authors = ["Basti"]
edition = "2021"
default-run = "ccrl-gui"

[lib]
name = "mini_tcec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mock-engine"
path = "src/mock_engine.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
shakmaty = { version = "0.26", features = ["variant"] }
pgn-reader = "0.25"
chrono = "0.4"
anyhow = "1.0"
tauri-plugin-store = "2.0.0-rc"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.4.2"
rand = "0.9.2"
log = "0.4"
env_logger = "0.10"
